samples/_failures_safe/1761326237_9b92b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb6cd2e5.c: In function ‘main’:
./samples/SAFE/__tmp_fb6cd2e5.c:163:5: error: expected expression at end of input
  163 |     if (len > 0 && input[len-1] == '\n')
      |     ^~
./samples/SAFE/__tmp_fb6cd2e5.c:163:5: error: expected declaration or statement at end of input
